# plant-pathology-2020

./: .gitignore  .pre-commit-config.yaml  NOTICE.md  README.md  dataset.py  generate_distill_submission.py  generate_final_submission.py  generate_soft_labels.py  loss_function.py  lrs_scheduler.py  models.py  pyproject.toml  train.py  tune_augmentation.py  utils.py
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml
