[tool.poetry]
name = "template-dl-devcontainer"
version = "0.1.0"
package-mode = false
description = "Template repo using devcontainer"
authors = ["rmuraix <35632215+rmuraix@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.26.4"
pandas = "2.2.3"
matplotlib = "3.9.4"
torch = "2.3.1"
torchvision = "0.18.1"
seaborn = "0.13.2"
scikit-learn = "1.5.2"
opencv-python = "4.11.0.86"
lightning = "2.4.0"
scipy = "1.15.3"
tqdm = "4.67.1"
albumentations = "1.4.24"
wandb = "0.20.1"
optuna = "4.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.2"
ipykernel = "6.29.5"
pre-commit = "4.2.0"
nbdev = "2.4.4"

[tool.ruff]
extend-include = ["*.ipynb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
